# scent

./: .gitignore  .gitmodules  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: curate_sigma.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/rules/: manifest.json
src-tauri/src/: capture_smoke.rs  deep.rs  emit.rs  etw.rs  exporter.rs  ipc.rs  launcher.rs  lib.rs  main.rs  model.rs  modmap.rs  peb.rs  sigma.rs  sigma_fields.rs  stateful.rs  store.rs  tracker.rs  triage.rs
src-tauri/tests/fixtures/sigma/: image_load_unsupported_hashes.yml  proc_creation_win_office_shell_spawn.yml  proc_creation_win_powershell_encoded.yml  registry_set_run_key_persistence.yml
src/components/: DeepPanel.tsx  EventsTable.tsx  ExportMenu.tsx  FacetBar.tsx  FindingsPanel.tsx  GlassPanel.tsx  GraphView.tsx  Inspector.tsx  IocPanel.tsx  ProcessTree.tsx  Segmented.tsx  TimelineView.tsx  TopBar.tsx  TreeNode.tsx  VerdictPanel.tsx
src/lib/: events.ts  findings.ts  ipc.ts  motion.ts  types.ts
src/styles/: app.css  global.css  tokens.css
