[package]
name = "scent"
version = "0.1.0"
description = "Single-process dynamic behavior analyzer (ETW)"
authors = ["scent"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "scent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Sigma rule engine: YAML parse + value modifiers (regex / base64).
serde_yaml = "0.9"
regex = "1"
base64 = "0.22"

# Optional LLM triage: a tiny blocking HTTP client (pure-Rust rustls TLS). The
# whole feature is opt-in (needs ANTHROPIC_API_KEY); scent runs fully without it.
ureq = "2"

# ETW capture
ferrisetw = "1.2"

# Process control + identity (suspended launch, resume, create-time)
[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    # ReadProcessMemory, for best-effort child command-line recovery via the PEB.
    "Win32_System_Diagnostics_Debug",
]

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.parking_lot]
version = "0.12"

# Native Mica/Acrylic backdrop for the Liquid Glass chrome
[dependencies.window-vibrancy]
version = "0.7"
